# realtime-api-workshop

./: .env.example  .gitignore  README.md  SETUP.md  azure.yaml  pyproject.toml  requirements.txt  requirements_backup.txt
.devcontainer/: devcontainer.json
00-minimal-web-rtc-demo/: .gitignore  gpt4_webrtc_demo.ipynb  gpt4o_webrtc_demo.html  requirements.txt
00-websocket-basics/: README.md  client.py  index.html  requirements.txt  server.py
01-getting-started-function-calling/: .gitignore  README.md  assistant_service.py  chainlit.md  chat.py  realtime2.py
02-building-multi-agent-system/: README.md  assistant_service.py  chat.py  realtime2.py
02-building-multi-agent-system/agents/: activation.py  root.py  sales.py  technical.py
02-building-multi-agent-system/envs/: .env.example
03-voice-rag/: README.md  advanced-exercises.md
infra/: README.md  main.bicep  main.parameters.json
infra/modules/: ai_hub.bicep  dependent_resources.bicep
scripts/: load_python_env.ps1  load_python_env.sh  write_env.ps1  write_env.sh
